# restframework-rdf

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg
backend/rdf/: apps.py  baseclasses.py  conftest.py  migrations.py  ns.py  parsers.py  parsers_test.py  renderers.py  renderers_test.py  utils.py  utils_test.py  views.py
backend/rdf/management/commands/: _rdfmigrate_test.py  rdfmigrate.py
backend/rdf/test_apps/: readme.md
backend/rdf/test_apps/with_migrations/: fixture.py  graph.py
backend/sparql/: conftest.py  constants.py  exceptions.py  negotiation.py  permissions.py  playground.py  renderers.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
backend/sparql/endpoints/: items.py  nlp_ontology.py  ontology.py  sources.py  vocab.py
backend/sparql/testfiles/: 1.txt
docs/: getting-started.md  index.md  mkdocs.yml  namespaces.md  sparql-endpoints.md  views.md
docs/docs/: index.md
docs/rdf/: migrations.md  parsers.md  renderers.md  utility-functions.md
docs/sparql/: making-sparql-endpoints.md  renderers.md  views.md
rdf/: __init__.py  conftest.py  migrations.py  migrations_test.py  renderers_test.py  utils_test.py  views.py
rdf/test_apps/with_migrations/: rdf_migrations.py
sparql/: __init__.py  conftest.py  constants.py  endpoints.py  urls.py  utils.py  views.py  views_test.py
sparql/backend/sparql/: conftest.py  renderers.py  urls.py
sparql/backend/sparql/endpoints/: items.py  ontology.py
sparql/endpoints/: vocab.py
sparql/test_app/: constants.py  graph.py  graphs.py  urls.py  views.py
sparql/test_apps/test_app/: views.py
