[metadata]
name = restframework-drf
version = 0.0
description = A Django app for integration between django rest framework and RDF
long_description = file: README.md
url = https://github.com/UUDigitalHumanitieslab/restframework-rdf
author = Utrecht University, Digital Humanities Lab
author_email = cdh@uu.nl
license = Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2