[metadata]
name = restframework-rdf
version = 1.0.1
description = A Django app for integration between django rest framework and RDF
long_description = file: README.md
url = https://github.com/UUDigitalHumanitieslab/restframework-rdf
author = Utrecht University, Centre for Digital Humanities - Research Software Lab
author_email = cdh@uu.nl
license = BSD-3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django>=3.2
    djangorestframework
    rdflib>6
